# teach-the-llm

./: .gitignore  README.md  main.py  pyproject.toml
agent/: __init__.py  conversation_logger.py  core.py  models.py
agent/data/: knowledge_base.json  leads.txt  listings.json  tour_bookings.txt
agent/prompt/: __init__.py  agent_prompt.py
agent/tests/fixtures/: sample_test.txt  test_scenarios.yaml
agent/tests/framework/: __init__.py  executor.py  expected_results.py  loader.py  matchers.py  models.py  real_agent_executor.py  reporter.py  test_evaluator.py  test_metrics.py
agent/tools/: __init__.py  handoff_tools.py  knowledge_base_tools.py  lead_tools.py  listing_tools.py  scheduling_tools.py  tool_decorator.py
gemma/: __init__.py  config.py  conversations.json  gemma_agent.py  main.py  run_quick_test.py
gemma/fine-tune/: combine_data.py  config.py  convert_to_simple.py  debug_format.py  google-sample-data.csv  prepare_data.py  sample-training-data.json  test_model.py  tools.py  train.py  training_data.json
gemma/fine-tune/data/: appointments_complete.json  appointments_edge.json  availability_dates.json  availability_edge.json  conv_abandoned.json  conv_browse_only.json  conv_gradual_info.json  conv_info_only.json  conv_mixed_intent.json  conv_terse_users.json  conv_vague_users.json  escalation_complex.json  escalation_frustration.json  knowledge_amenities.json  knowledge_leasing.json  leads_edge.json  (+10 more)
gemma/test_results/: store_9db48979.json  store_9db48979_ui.json  store_e68204d8.json  store_e68204d8_ui.json
gemma/tests/: __init__.py  conftest.py  test_agent.py
util/: __init__.py  upload_to_hf.py
