[project]
name = "fine-tune-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.4.1",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "llama-cpp-python>=0.3.16",
    "langchain-openai>=1.1.6",
    # HuggingFace Transformers for FunctionGemma (proper tokenization)
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.30.0",
    "huggingface-hub>=0.36.0",
    "datasets>=4.4.2",
    "trl>=0.26.2",
    "boto3>=1.42.21",
    "dotenv>=0.9.9",
    "peft>=0.18.0",
]

[project.scripts]
property-agent = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
# Always use verbose output with detailed traceback
addopts = "-v --tb=long -s"
# Show locals in tracebacks
testpaths = ["tests"]
# Log settings - INFO level to suppress noisy boto/urllib3 DEBUG logs
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
# File logging - DEBUG level for detailed file logs
log_file = "test_results/test_output.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
# Markers
markers = [
    "integration: marks tests as integration tests (require real API)",
]
